src/test/ui/issues/issue-2111.stderr
error[E0004]: non-exhaustive patterns: `(None, None)` not covered
  --> $DIR/issue-2111.rs:2:9
   |
LL |   match (a,b) {
   |         ^^^^^ pattern `(None, None)` not covered

error: aborting due to previous error

For more information about this error, try `rustc --explain E0004`.
